--- a/Workbit.App/Areas/Ceo/Views/Attendance/AttendanceLog.cshtml
+++ b/Workbit.App/Areas/Ceo/Views/Attendance/AttendanceLog.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<AttendanceEntryReadDto>
+﻿@model IEnumerable<AttendanceEntryViewModel>
 @{
     ViewData["Title"] = "Attendance Log";
 }
