--- a/Workbit.App/Areas/Ceo/Views/Job/Details.cshtml
+++ b/Workbit.App/Areas/Ceo/Views/Job/Details.cshtml
@@ -120,8 +120,8 @@
             <p><em>No employees are currently assigned to this job.</em></p>
         }
 
-        <a asp-controller="Department" asp-action="DepartmentDetails" asp-route-id="@Model.DepartmentId" class="back-btn">
-            ← Back to Department
+        <a asp-area="Ceo" asp-controller="Department" asp-action="Details" asp-route-id="@Model.DepartmentId" class="back-btn">
+            Back to Department
         </a>
     </div>
 </div>
