--- a/Workbit.App/Areas/Ceo/Views/Manager/Details.cshtml
+++ b/Workbit.App/Areas/Ceo/Views/Manager/Details.cshtml
@@ -139,7 +139,7 @@
 
         <!-- Back Button -->
         <div class="text-center">
-            <a asp-controller="Department" asp-action="DepartmentDetails" asp-route-id="@Model.DepartmentId" class="back-btn">Back to Department</a>
+            <a asp-area="Ceo" asp-controller="Department" asp-action="Details" asp-route-id="@Model.DepartmentId" class="back-btn">Back to Department</a>
         </div>
     </div>
 </div>
