--- a/Workbit.App/Areas/Ceo/Views/_ViewImports.cshtml
+++ b/Workbit.App/Areas/Ceo/Views/_ViewImports.cshtml
@@ -3,6 +3,8 @@
 @using Workbit.Core.Models.Department;
 @using Workbit.Core.Models.Payment;
 @using Workbit.Core.Models.Company;
+@using Workbit.Core.Models.Manager;
+@using Workbit.Core.Models.Job;
 @using Workbit.Core.Models.Attendance;
 @using static Workbit.Common.DataConstants.Constants;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
