--- a/Workbit.App/Areas/Manager/Views/Job/Edit.cshtml
+++ b/Workbit.App/Areas/Manager/Views/Job/Edit.cshtml
@@ -105,7 +105,7 @@
 
             <div class="col-12 text-center mt-4">
                 <button type="submit" class="btn-save">Save Changes</button>
-                <a asp-action="DepartmentJobs" asp-controller="Manager" class="btn-cancel">Cancel</a>
+                <a asp-area="Manager" asp-controller="Job" asp-action="All" class="btn-cancel" style="text-decoration:none;">Cancel</a>
             </div>
         </form>
     </div>
