--- a/Workbit.App/Views/Shared/_Layout.cshtml
+++ b/Workbit.App/Views/Shared/_Layout.cshtml
@@ -210,7 +210,7 @@
 
 	<footer>
 		<div class="container">
-			&copy; @DateTime.Now.Year - Workbit - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+			&copy; @DateTime.Now.Year - Workbit
 		</div>
 	</footer>
 
