--- a/Workbit.App/Views/User/Login.cshtml
+++ b/Workbit.App/Views/User/Login.cshtml
@@ -132,12 +132,12 @@
                 Log In
             </button>
 
-            <!-- Forgot Password Link -->
+            @* <!-- Forgot Password Link -->
             <div class="text-center mt-4">
                 <a asp-action="ForgotPassword" asp-controller="Account">
                     Forgot Password?
                 </a>
-            </div>
+            </div> *@
         </form>
     </div>
 </div>
