--- a/Workbit.App/Areas/Employee/Views/Payment/History.cshtml
+++ b/Workbit.App/Areas/Employee/Views/Payment/History.cshtml
@@ -87,7 +87,7 @@
 
     <!-- Filters -->
     <div class="filter-card">
-        <form method="get" asp-action="HistoryForEmployee" class="row g-3 align-items-end">
+        <form method="get" asp-area="Employee" asp-controller="Payment" asp-action="History" class="row g-3 align-items-end">
             <div class="col-md-4">
                 <label class="form-label fw-bold">Start Date</label>
                 <input type="date" name="startDate" class="form-control" value="@Model.StartDate" />
